[package]
name = "bolero-test"
version = "0.1.0"
edition = "2024"


[[test]]
name = "test"
path = "tests/test.rs"


[profile.fuzz]
inherits = "dev"
opt-level = 3
incremental = false
codegen-units = 1

[dev-dependencies]
bolero = { git = "https://github.com/soteria-tools/bolero", rev = "bdcfbb840fd1022220d150fb9ced192af182ad06" }
